--- a/progetto-museo/src/main/resources/templates/index.html
+++ b/progetto-museo/src/main/resources/templates/index.html
@@ -15,8 +15,12 @@
 						<button class="btn" th:text="#{index.explore}">Esplora</button>
 					</a>
 					
-					<a th:href="@{/loginCuratori}">
-						<button class="btn" th:text="#{index.curatore.login}">Login Curatori</button>
+					<a th:href="@{/login}">
+						<button class="btn" th:text="#{index.login}">Accedi</button>
+					</a>
+					
+					<a th:href="@{/register}">
+						<button class="btn" th:text="#{index.registration}">Registrati</button>
 					</a>
 				</div>
 	   		</div>
