Added Many Things
+ addOpera
+ addCollezione
+ cambio di lingua con local resolver + interceptor
- fixati molti bug

--- a/progetto-museo/src/main/resources/templates/admin/home.html
+++ b/progetto-museo/src/main/resources/templates/admin/home.html
@@ -11,21 +11,21 @@
 		    	<h1 class="title" th:text="#{admin.adminHome.title}"><u>Area Riservata agli Amministratori</u></h1>
 		    	
 		    	<div class="buttonlist">
-					<a th:href="@{/addOpera}">
+					<a th:href="@{/admin/addOpera}">
 						<button class="btn" th:text="#{admin.adminHome.addOpera}">Aggiungi un'Opera</button>
 					</a>
-					<a th:href="@{/removeOpera}">
+					<a th:href="@{/admin/removeOpera}">
 						<button class="btn" th:text="#{admin.adminHome.removeOpera}">Rimuovi un'Opera</button>
 					</a>
 					
-					<a th:href="@{/addCollezione}">
+					<a th:href="@{/admin/addCollezione}">
 						<button class="btn" th:text="#{admin.adminHome.addCollezione}">Aggiungi una Collezione</button>
 					</a>
-					<a th:href="@{/removeCollezione}">
+					<a th:href="@{/admin/removeCollezione}">
 						<button class="btn" th:text="#{admin.adminHome.removeCollezione}">Rimuovi una Collezione</button>
 					</a>
 					
-					<a th:href="@{/addArtista}">
+					<a th:href="@{/admin/addArtista}">
 						<button class="btn" th:text="#{admin.adminHome.addArtista}">Aggiungi un'Artista</button>
 					</a>
 					
