--- a/progetto-museo/src/main/resources/templates/admin/home.html
+++ b/progetto-museo/src/main/resources/templates/admin/home.html
@@ -21,6 +21,9 @@
 					<a th:href="@{/admin/addCollezione}">
 						<button class="btn" th:text="#{admin.adminHome.addCollezione}">Aggiungi una Collezione</button>
 					</a>
+					<a th:href="@{/admin/addToCollezione}">
+						<button class="btn" th:text="#{admin.adminHome.addToCollezione}">Aggiungi Opera alla Collezione</button>
+					</a>
 					<a th:href="@{/admin/removeCollezione}">
 						<button class="btn" th:text="#{admin.adminHome.removeCollezione}">Rimuovi una Collezione</button>
 					</a>
