Testato correttamente il sort tramite comparator

--- a/progetto-museo/src/main/resources/static/css/my-style.css
+++ b/progetto-museo/src/main/resources/static/css/my-style.css
@@ -42,6 +42,10 @@
 .bordered{
 	border: 2px solid black;
 }
+
+.underlined{
+	text-decoration: underline;
+}
 /* --- colored backgrounds and borders --- */
 /* --- logical inline structure --- */
 .container{
